--- a/index.html
+++ b/index.html
@@ -1402,7 +1402,7 @@
                 `Your assignment "${file.title}" has been graded: ${grade}%. Comment: ${commentText}` :
                 `New comment on your assignment "${file.title}": ${commentText}`;
                 
-            sendEmailNotification(`${file.uploadedBy}@university.edu`, emailSubject, emailMessage);
+            sendEmailNotification(`${file.uploadedBy}sillahmohamedkanu@gmail.com`, emailSubject, emailMessage);
             
             setTimeout(() => {
                 closeCommentModal();
