--- a/index.html
+++ b/index.html
@@ -1040,10 +1040,10 @@
 
         // Shared database (simulates server-side storage)
         let userDatabase = {
-            'admin': { password: '1234', role: 'admin', email: 'admin@university.edu', fullName: 'System Administrator' },
+            'admin': { password: '1234', role: 'admin', email: 'admin@u.edu', fullName: 'System Administrator' },
             'researcher': { password: 'data2024', role: 'researcher', email: 'researcher@university.edu', fullName: 'Research Staff' },
-            'student': { password: 'pass123', role: 'student', email: 'student@university.edu', fullName: 'Demo Student' },
-            'lecturer': { password: 'teach2024', role: 'lecturer', email: 'lecturer@university.edu', fullName: 'Dr. Teaching Staff' }
+            'student': { password: 'pass123', role: 'student', email: 'sillahkanu@gwu.edu', fullName: 'Demo Student' },
+            'lecturer': { password: 'teach2024', role: 'lecturer', email: 'sillahmohamedkanu@gmail.com', fullName: 'Dr. Teaching Staff' }
         };
 
         let globalNotifications = []; // Shared across all users
