--- a/index.html
+++ b/index.html
@@ -855,7 +855,7 @@
                     <p class="repo-description">Comprehensive epidemiological trend analysis tools and sample datasets</p>
                 </div>
                 <div class="logo logo-secondary">
-                    <img src="ICF-SL.png" alt="ICF-SL Logo" style="width: 100%; height: 100%; object-fit: contain;" onerror="this.style.display='none'; this.nextElementSibling.style.display='block';">
+                    <img src="ICF-SL.jpg" alt="ICF-SL Logo" style="width: 100%; height: 100%; object-fit: contain;" onerror="this.style.display='none'; this.nextElementSibling.style.display='block';">
                     <div style="font-size: 12px; color: #8b949e; display: none; text-align: center;">
                         <div>ICF-SL.png</div>
                         <div style="font-size: 10px;">Logo Missing</div>
