--- a/week4.html
+++ b/week4.html
@@ -180,7 +180,7 @@
     <div class="malaria-module">
         <div class="container">
             <div class="header fade-in">
-                <h1>📁 Week 4: Combining Multiple Data Files</h1>
+                <h1>Week 4: Combining Multiple Data Files</h1>
                 <p>Efficiently merging malaria datasets from multiple Excel files</p>
                 <div class="progress-bar">
                     <div class="progress-fill"></div>
@@ -196,7 +196,7 @@
             </div>
 
             <div class="image-container fade-in">
-                <img src="data:image/png;base64,YOUR_BASE64_DATA_HERE" 
+                <img src="Concatenate (2).png" 
                      alt="Visual workflow for combining multiple Excel files" 
                      style="max-width: 100%; height: auto; border-radius: 8px; box-shadow: 0 4px 12px rgba(0,0,0,0.3);">
                 <div style="margin-top: 10px; color: #94a3b8; font-size: 0.9em;">
