--- a/index.html
+++ b/index.html
@@ -146,8 +146,8 @@
 
         .main-content {
             display: grid;
-            grid-template-columns: 1fr 300px;
-            gap: 30px;
+            grid-template-columns: 80% 20%;  
+            gap: 5px;
         }
 
         .categories-container {
@@ -412,7 +412,7 @@
         .sidebar {
             display: flex;
             flex-direction: column;
-            gap: 20px;
+            gap: 5px;
         }
 
         .info-card {
@@ -541,7 +541,7 @@
 
         .web-frame {
             width: 100%;
-            height: 600px;
+            height: 800px;
             border: none;
             border-radius: 0 0 6px 6px;
             background: white;
