--- a/index.html
+++ b/index.html
@@ -972,7 +972,7 @@
                         <!-- Embedded URL will load here -->
                         <iframe 
                             id="embeddedFrame"
-                            src="src="https://icf-sl-chatbox.streamlit.app?embed=true" 
+                            src="https://icf-sl-chatbox.streamlit.app?embed=true" 
                             class="web-frame"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                             sandbox="allow-scripts allow-same-origin allow-forms allow-popups allow-presentation"
