--- a/index.html
+++ b/index.html
@@ -985,7 +985,7 @@
                 </div>
                 
                 <!-- General Knowledge Tab -->
-                <div class="categories-container tab-content" id="webtools-tab">
+                <div class="categories-container tab-content" id="code-tab">
                     <div class="categories-header">
                         <div class="categories-title">General Knowledge</div>
                         <div>
@@ -1009,7 +1009,7 @@
                 </div>
                 
                 <!-- SNT Code Library Tab -->
-                <div class="categories-container tab-content" id="webtools-tab">
+                <div class="categories-container tab-content" id="snt-tab">
                     <div class="categories-header">
                         <div class="categories-title">SNT Code Library</div>
                         <div>
