--- a/index.html
+++ b/index.html
@@ -998,7 +998,7 @@
                         <!-- Embedded URL will load here -->
                         <iframe 
                             id="embeddedFrame"
-                            src="https://mohamedsillahkanu.github.io/Code-Repository/" 
+                            src="https://www.online-python.com/?embed=true" 
                             class="web-frame"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                             sandbox="allow-scripts allow-same-origin allow-forms allow-popups allow-presentation"
