--- a/index.html
+++ b/index.html
@@ -987,7 +987,7 @@
                 <!-- General Knowledge Tab -->
                 <div class="categories-container tab-content" id="code-tab">
                     <div class="categories-header">
-                        <div class="categories-title">General Knowledge</div>
+                        <div class="categories-title">R Coding Practice</div>
                         <div>
                             <button class="refresh-btn" onclick="refreshFrame()">🔄 Refresh</button>
                         </div>
@@ -998,7 +998,7 @@
                         <!-- Embedded URL will load here -->
                         <iframe 
                             id="embeddedFrame"
-                            src="https://www.programiz.com/r/online-compiler/?embed=true" 
+                            src="https://rdrr.io/snippets/?embed=true" 
                             class="web-frame"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                             sandbox="allow-scripts allow-same-origin allow-forms allow-popups allow-presentation"
