--- a/index.html
+++ b/index.html
@@ -918,7 +918,7 @@
                     <button class="tab-btn active" onclick="switchTab('datasets')">Dataset Categories</button>
                     <button class="tab-btn" onclick="switchTab('notes')">Course Notes</button>
                     <button class="tab-btn" onclick="switchTab('webtools')">Chatbot</button>
-                    <button class="tab-btn" onclick="switchTab('code')">Genaral Knowledge</button>
+                    <button class="tab-btn" onclick="switchTab('code')">R Coding Practice</button>
                     <button class="tab-btn" onclick="switchTab('snt')">SNT Code Library</button>
                 </div>
 
