--- a/index.html
+++ b/index.html
@@ -1022,7 +1022,7 @@
                         <!-- Embedded URL will load here -->
                         <iframe 
                             id="embeddedFrame"
-                            src="https://ahadi-analytics.github.io/snt-code-library/" 
+                            src="https://data-wrangling.streamlit.app/?embed=true" 
                             class="web-frame"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                             sandbox="allow-scripts allow-same-origin allow-forms allow-popups allow-presentation"
