--- a/index.html
+++ b/index.html
@@ -876,7 +876,7 @@
                     </div>
                 </div>
                 <div class="repo-info">
-                    <h1 class="repo-title">Clean Malaria Data Repository</h1>
+                    <h1 class="repo-title">Training Plan</h1>
                     <p class="repo-description">Comprehensive epidemiological trend analysis tools and sample datasets</p>
                 </div>
                 <div class="logo logo-secondary">
