--- a/week1.html
+++ b/week1.html
@@ -477,7 +477,7 @@
                 <h3>🎥 Video: R Basics - Variables and Data Types</h3>
                 <p>Learn the fundamentals of R syntax, variables, and data types with practical examples:</p>
                 <div class="video-container">
-                    <iframe src="https://www.youtube.com/embed/SWxoJqTqo08" title="R Basics - Variables and Data Types" allowfullscreen></iframe>
+                    <iframe src="https://www.youtube.com/embed/SWxoJqTqo08?embed=true" title="R Basics - Variables and Data Types" allowfullscreen></iframe>
                 </div>
             </div>
 
