--- a/week1.html
+++ b/week1.html
@@ -405,7 +405,7 @@
                 <h3>🎥 Video: Installing R and RStudio</h3>
                 <p>Watch this comprehensive tutorial on how to install R and RStudio on your computer:</p>
                 <div class="video-container">
-                    <iframe src="https://www.youtube.com/watch?v=mxNrU902uyc" title="Installing R and RStudio" allowfullscreen></iframe>
+                    <iframe src="https://www.youtube.com/embed/watch?v=mxNrU902uyc" title="Installing R and RStudio" allowfullscreen></iframe>
                 </div>
             </div>
 
@@ -471,7 +471,7 @@
                 <h3>🎥 Video: R Basics - Variables and Data Types</h3>
                 <p>Learn the fundamentals of R syntax, variables, and data types with practical examples:</p>
                 <div class="video-container">
-                    <iframe src="https://www.youtube.com/watch?v=mxNrU902uyc?embed=true" title="R Basics - Variables and Data Types" allowfullscreen></iframe>
+                    <iframe src="https://www.youtube.com/embed/watch?v=mxNrU902uyc" title="R Basics - Variables and Data Types" allowfullscreen></iframe>
                 </div>
             </div>
 
