--- a/week1.html
+++ b/week1.html
@@ -405,7 +405,7 @@
                 <h3>🎥 Video: Installing R and RStudio</h3>
                 <p>Watch this comprehensive tutorial on how to install R and RStudio on your computer:</p>
                 <div class="video-container">
-                    <iframe src="https://www.youtube.com/embed/watch?v=mxNrU902uyc" title="Installing R and RStudio" allowfullscreen></iframe>
+                    <iframe src="https://www.youtube.com/embed/mxNrU902uyc" title="Installing R and RStudio" allowfullscreen></iframe>
                 </div>
             </div>
 
