--- a/index.html
+++ b/index.html
@@ -1126,7 +1126,7 @@
                         <!-- Embedded URL will load here -->
                         <iframe 
                             id="embeddedFrame"
-                            src="https://nmcp-sl-snt-automation.streamlit.app/?embed=true" 
+                            src="https://ramuo226.github.io/Mortality_project/?embed=true" 
                             class="web-frame"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                             sandbox="allow-scripts allow-same-origin allow-forms allow-popups allow-presentation"
