--- a/index.html
+++ b/index.html
@@ -996,6 +996,7 @@
                     <button class="tab-btn" onclick="switchTab('webtools')">Chatbot</button>
                     <button class="tab-btn" onclick="switchTab('code')">R Coding Practice</button>
                     <button class="tab-btn" onclick="switchTab('snt')">SNT Code Library</button>
+                    <button class="tab-btn" onclick="switchTab('files')">MPR Outputs</button>
                 </div>
 
                 <!-- Dataset Categories Tab -->
@@ -1064,9 +1065,9 @@
                     </div>
                 </div>
                 <!-- Course Notes Tab -->
-                <div class="categories-container tab-content" id="notes-tab">
+                <div class="categories-container tab-content" id="files-tab">
                     <div class="categories-header">
-                        <div class="categories-title">Course Notes</div>
+                        <div class="categories-title">MPR outputs</div>
                         <div>
                             <select id="fileSelect" onchange="switchFile()" style="background: #0d1117; color: #e6edf3; border: 1px solid #30363d; padding: 8px 12px; border-radius: 4px;">
                                 <option value="file1">File 1: Introduction to R</option>
