--- a/index.html
+++ b/index.html
@@ -1087,7 +1087,7 @@
                     </div>
                     
                     <!-- File Content Container -->
-                    <div class="notes-content" id="file-content-container">
+                    <div class="files-content" id="file-content-container">
                         <div class="loading-message">Loading file content...</div>
                     </div>
                 </div>
