--- a/index.html
+++ b/index.html
@@ -1749,21 +1749,7 @@
             }
         };
 
-        // MPR URLs mapping
-        const mprUrls = {
-            'mpr1': 'https://icf-sl-chatbox.streamlit.app?embed=true',
-            'mpr2': 'https://webr.sh/?embed=true',
-            'mpr3': 'https://ahadi-analytics.github.io/snt-code-library/?embed=true',
-            'mpr4': 'https://icf-sl-chatbox.streamlit.app?embed=true',
-            'mpr5': 'https://webr.sh/?embed=true',
-            'mpr6': 'https://ahadi-analytics.github.io/snt-code-library/?embed=true',
-            'mpr7': 'https://icf-sl-chatbox.streamlit.app?embed=true',
-            'mpr8': 'https://webr.sh/?embed=true',
-            'mpr9': 'https://ahadi-analytics.github.io/snt-code-library/?embed=true',
-            'mpr10': 'https://icf-sl-chatbox.streamlit.app?embed=true',
-            'mpr11': 'https://webr.sh/?embed=true',
-            'mpr12': 'https://ahadi-analytics.github.io/snt-code-library/?embed=true'
-        };
+        // Remove the unused mprUrls object since we're using dropdown values directly
 
         // Show toast notification
         const showToast = (message, type = 'success') => {
