--- a/index.html
+++ b/index.html
@@ -1175,6 +1175,9 @@
                 <div class="stat-item">
                     <span class="stat-number" id="overdueAssignments">0</span> overdue assignments
                 </div>
+                <div class="stat-item">
+                    <span class="stat-number" id="lockedAssignments">0</span> locked assignments
+                </div>
             </div>
         </div>
     </header>
