--- a/file1.html
+++ b/file1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Week 4: Combining Multiple Data Files for Malaria Analysis</title>
+    <title>Combining Multiple Data Files for Malaria Analysis</title>
     <style>
         .malaria-module {
             margin: 0;
