--- a/file1.html
+++ b/file1.html
@@ -250,7 +250,7 @@
     <div class="malaria-module">
         <div class="container">
             <div class="header fade-in">
-                <h1>📁 Week 4: Combining Multiple Data Files</h1>
+                <h1>📁 Combining Multiple Data Files</h1>
                 <p>Efficiently merging malaria datasets from multiple sources</p>
                 <div class="progress-bar">
                     <div class="progress-fill"></div>
