--- a/file4.html
+++ b/file4.html
@@ -80,6 +80,22 @@
             cursor: pointer;
             transition: all 0.3s ease;
             color: #e2e8f0;
+            width: 100%;
+            display: block;
+            appearance: none;
+            -webkit-appearance: none;
+            -moz-appearance: none;
+        }
+        
+        .file-input::-webkit-file-upload-button {
+            background: linear-gradient(135deg, #3b82f6 0%, #2563eb 100%);
+            color: white;
+            border: none;
+            padding: 8px 16px;
+            border-radius: 8px;
+            cursor: pointer;
+            margin-right: 12px;
+            font-weight: 600;
         }
 
         .file-input:hover {
