--- a/index.html
+++ b/index.html
@@ -1353,7 +1353,7 @@
                         <!-- Embedded URL will load here -->
                         <iframe 
                             id="sntFrame"
-                            src="https://data-wrangling.streamlit.app/?embed=true" 
+                            src="https://mohamedsillahkanu.github.io/AI/?embed=true" 
                             class="web-frame"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                             sandbox="allow-scripts allow-same-origin allow-forms allow-popups allow-presentation"
