--- a/index.html
+++ b/index.html
@@ -1270,7 +1270,7 @@
                         <div>
                             <select id="fileSelect" onchange="switchFile()" 
                                     style="background: #0d1117; color: #e6edf3; border: 1px solid #30363d; padding: 8px 12px; border-radius: 4px;">
-                                <option value="https://example.com/r-intro">File 1: Introduction to R</option>
+                                <option value="https://mohamedsillahkanu.github.io/AI/?embed=true">File 1: Introduction to R</option>
                                 <option value="https://example.com/data-cleaning">File 2: Data Cleaning & Visualization</option>
                                 <option value="https://example.com/statistics">File 3: Statistical Analysis</option>
                                 <option value="https://example.com/geospatial">File 4: Geospatial Data</option>
