--- a/index.html
+++ b/index.html
@@ -1194,7 +1194,7 @@
                     <button class="tab-btn" onclick="switchTab(event, 'webtools')">Chatbot</button>
                     <button class="tab-btn" onclick="switchTab(event, 'code')">R Coding Practice</button>
                     <button class="tab-btn" onclick="switchTab(event, 'snt')">SNT Code Library</button>
-                    <button class="tab-btn" onclick="switchTab(event, 'files')">MPR Outputs</button>
+                    <button class="tab-btn" onclick="switchTab(event, 'files')">SNT Automation</button>
                 </div>
 
                 <!-- Dataset Categories Tab -->
@@ -1266,7 +1266,7 @@
                 <!-- MPR Outputs Tab -->
                 <div class="categories-container tab-content" id="files-tab">
                     <div class="categories-header">
-                        <div class="categories-title">MPR Outputs</div>
+                        <div class="categories-title">SNT Automation</div>
                         <div>
                             <select id="fileSelect" onchange="switchFile()" style="background: #0d1117; color: #e6edf3; border: 1px solid #30363d; padding: 8px 12px; border-radius: 4px;">
                                 <option value="file1">File 1: Introduction to R</option>
