--- a/index.html
+++ b/index.html
@@ -1973,7 +1973,7 @@
             
             // Define your URL mappings here
             const fileUrls = {
-                'file1': 'https://mohamedsillahkanu.github.io/AI/?embed=true',
+                'file1': 'https://mohamedsillahkanu.github.io/combine-files/?embed=true',
                 'file2': 'https://your-url-for-file2.com', 
                 'file3': 'https://your-url-for-file3.com',
                 'file4': 'https://your-url-for-file4.com',
