--- a/index.html
+++ b/index.html
@@ -1269,8 +1269,8 @@
                         <div class="categories-title">SNT Automation</div>
                         <div>
                             <select id="fileSelect" onchange="switchFile()" style="background: #0d1117; color: #e6edf3; border: 1px solid #30363d; padding: 8px 12px; border-radius: 4px;">
-                                <option value="file1">File 1: Introduction to R</option>
-                                <option value="file2">File 2: Data Cleaning & Visualization</option>
+                                <option value="file1">Combine Excel</option>
+                                <option value="file2">Create New Variables</option>
                                 <option value="file3">File 3: Statistical Analysis</option>
                                 <option value="file4">File 4: Geospatial Data</option>
                                 <option value="file5">File 5: Time Series Analysis</option>
@@ -1974,7 +1974,7 @@
             // Define your URL mappings here
             const fileUrls = {
                 'file1': 'https://mohamedsillahkanu.github.io/combine-files/?embed=true',
-                'file2': 'https://your-url-for-file2.com', 
+                'file2': 'https://mohamedsillahkanu.github.io/create-new-variables/?embed=true', 
                 'file3': 'https://your-url-for-file3.com',
                 'file4': 'https://your-url-for-file4.com',
                 'file5': 'https://your-url-for-file5.com',
