--- a/index.html
+++ b/index.html
@@ -1976,7 +1976,7 @@
                 'file1': 'https://mohamedsillahkanu.github.io/combine-files/?embed=true',
                 'file2': 'https://mohamedsillahkanu.github.io/create-new-variables/?embed=true', 
                 'file3': 'https://mohamedsillahkanu.github.io/rename-variables/?embed=true',
-                'file4': 'https://your-url-for-file4.com',
+                'file4': 'https://mohamedsillahkanu.github.io/heatmap/?embed=true',
                 'file5': 'https://your-url-for-file5.com',
                 'file6': 'https://your-url-for-file6.com',
                 'file7': 'https://your-url-for-file7.com',
