--- a/index.html
+++ b/index.html
@@ -1272,8 +1272,8 @@
                                 <option value="file1">Combine Excel</option>
                                 <option value="file2">Create New Variables</option>
                                 <option value="file3">Rename Vriables</option>
-                                <option value="file4">File 4: Geospatial Data</option>
-                                <option value="file5">File 5: Time Series Analysis</option>
+                                <option value="file4">Reporting Status</option>
+                                <option value="file5">Reporting Rate</option>
                                 <option value="file6">File 6: Machine Learning Basics</option>
                                 <option value="file7">File 7: Advanced Visualization</option>
                                 <option value="file8">File 8: Database Integration</option>
@@ -1977,7 +1977,7 @@
                 'file2': 'https://mohamedsillahkanu.github.io/create-new-variables/?embed=true', 
                 'file3': 'https://mohamedsillahkanu.github.io/rename-variables/?embed=true',
                 'file4': 'https://mohamedsillahkanu.github.io/heatmap/?embed=true',
-                'file5': 'https://your-url-for-file5.com',
+                'file5': 'https://mohamedsillahkanu.github.io/reporting-rate/?embed=true',
                 'file6': 'https://your-url-for-file6.com',
                 'file7': 'https://your-url-for-file7.com',
                 'file8': 'https://your-url-for-file8.com',
