--- a/index.html
+++ b/index.html
@@ -1280,7 +1280,7 @@
                                 <option value="file9">File 9: Report Generation</option>
                                 <option value="file10">File 10: Reproducible Research</option>
                                 <option value="file11">File 11: Web Applications</option>
-                                <option value="file12">File 12: Final Project</option>
+                                <option value="file12">Map Generator</option>
                             </select>
                         </div>
                     </div>
@@ -1984,7 +1984,7 @@
                 'file9': 'https://your-url-for-file9.com',
                 'file10': 'https://your-url-for-file10.com',
                 'file11': 'https://your-url-for-file11.com',
-                'file12': 'https://your-url-for-file12.com'
+                'file12': 'https://mohamedsillahkanu.github.io/map-generator/?embed=true'
             };
             
             const url = fileUrls[selectedFile];
