--- a/index.html
+++ b/index.html
@@ -1274,7 +1274,7 @@
                                 <option value="file3">Rename Vriables</option>
                                 <option value="file4">Reporting Status</option>
                                 <option value="file5">Reporting Rate</option>
-                                <option value="file6">File 6: Machine Learning Basics</option>
+                                <option value="file6">Fuzzy Name Matching</option>
                                 <option value="file7">File 7: Advanced Visualization</option>
                                 <option value="file8">File 8: Database Integration</option>
                                 <option value="file9">File 9: Report Generation</option>
@@ -1978,7 +1978,7 @@
                 'file3': 'https://mohamedsillahkanu.github.io/rename-variables/?embed=true',
                 'file4': 'https://mohamedsillahkanu.github.io/heatmap/?embed=true',
                 'file5': 'https://mohamedsillahkanu.github.io/reporting-rate/?embed=true',
-                'file6': 'https://your-url-for-file6.com',
+                'file6': 'https://mohamedsillahkanu.github.io/fuzzy-name-matching/?embed=true',
                 'file7': 'https://your-url-for-file7.com',
                 'file8': 'https://your-url-for-file8.com',
                 'file9': 'https://your-url-for-file9.com',
